# markitai

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  Dockerfile  FORY.md  Justfile  LICENSE  PRD.md  README.md  README_CN.md  README_ZH.md  data.json  markit.example.toml  markit.example.yaml  pyproject.toml  requirement.md
.github/: copilot-instructions.md  dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  coverage-comment.yml  deploy-website.yml  publish.yml  release-please.yml
archive/: PRD.md  README.md  README_CN.md  batch_20260111_204643_44231f37.log.bak.1  batch_20260111_204643_44231f37.log.bak.2  codebase_analysis_report_20260108.md  convert_to_markdown.py  gemini_api_quickstart.md  logs_202601070929.txt  logs_202601071112.txt  logs_202601071152.txt  logs_202601071723.txt  logs_202601080940.txt  markit.yaml.bak.20260110  markit.yaml.bak.20260111  openai_python_api_readme.md  provider_connectivity_test.md  refactor_pipeline.md  test_ollama_analyze.md  test_openrouter_issue.md
docs/: 015-REVIEW.md  020-SPEC.md  2026-03-11-project-implementation-review.md  2026-03-12-project-implementation-review.md  2026-03-19-html-url-extraction-parity-commit-review.md  CONTRIBUTING.md  CONTRIBUTING_ZH.md  PRD.md  PRD_CN.md  README_ZH.md  ROADMAP.md  SPEC.md  STATE_MACHINE.md  ai-tools-setup.md  architecture.md  code-review-2026-03-22.md  publishing.md  redesign-vision-2026-07-08.md  requirement.md  spec.md  tasks.md  user-journey.md
docs/guide/: fetch-policy.md
docs/plans/: 2026-01-29-frontmatter-loss-investigation.md  2026-01-30-dependency-simplification.md  2026-01-31-local-provider-integration-improvement.zh.md  2026-01-31-test-coverage-improvement.zh.md  2026-02-01-local-provider-integration-implementation.md  2026-02-05-cli-ux-design.md  2026-02-05-cli-ux-full-implementation.md  2026-02-05-cli-ux-full-redesign.md  2026-02-05-cli-ux-implementation.md  2026-02-05-script-consolidation-design.md  2026-02-05-script-consolidation-plan.md  2026-02-05-ux-simplification-design.md  2026-02-05-ux-simplification-impl.md  2026-02-06-codebase-optimization.md  2026-02-06-full-project-audit.md  2026-02-06-performance-optimization.md  2026-02-23-cf-markdown-and-playwright-enhancement.md  2026-02-28-v052-post-review-fixes.md  2026-03-03-scrapling-capability-borrowing-plan.md  2026-03-04-batch-perf-optimization.md  2026-03-04-jina-utilization.md  2026-03-05-env-var-and-subscription-providers-design.md  2026-03-06-fetch-router-coordination-fixes.md  2026-03-06-native-webextract-pre-llm-quality.md  2026-03-08-frontmatter-generation-failover-design.md  2026-03-09-fetch-strategy-priority-and-exemption.md  2026-03-09-markitai-metadata-namespace.md  2026-03-12-auto-detect-llm-providers.md  2026-03-12-pdf-ocr-warning-and-url-image-drift-review-plan.md  2026-03-13-stabilization-fix-and-pure-mode-design.md  2026-03-13-stabilization-fix-and-pure-mode-plan.md  2026-03-18-codebase-review-report.md  2026-03-18-p0a-concurrency-safety.md  2026-03-18-p0b-safety-boundary-tests.md  2026-03-18-p1a-resource-lifecycle.md  2026-03-18-p3b-fetch-file-split-design.md  2026-03-18-p3c-large-function-split-design.md  2026-03-19-html-url-extraction-parity.md  2026-03-19-p3d-webextract-enhancement-design.md
docs/reference/: 016-SPEC.md  020-REVIEW-1.md  PRD.md  agent_browser_readme.md  code-optimization-20260118.md  convert_to_markdown.py  gemini_api.md  gemini_batch_api.md  gemini_support_image_types.md  litellm.md  litellm_analysis.md  litellm_batches.md  litellm_config_settings.md  llm_json_mode.md  markit-docs-optimization-20260116.md  markit-log-optimization-20260116.md  markit-overall-optimization-1.md  (+19 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0521755d8ac99fba___init___py.html  z_0521755d8ac99fba_history_py.html  z_0521755d8ac99fba_output_py.html  z_0521755d8ac99fba_report_py.html  z_0521755d8ac99fba_types_py.html  z_1c4e163930bdb055___init___py.html  z_1c4e163930bdb055_cache_py.html  z_1c4e163930bdb055_content_py.html  z_1c4e163930bdb055_degeneration_py.html  z_1c4e163930bdb055_document_py.html  z_1c4e163930bdb055_engine_py.html  z_1c4e163930bdb055_models_py.html  z_1c4e163930bdb055_processor_py.html  z_1c4e163930bdb055_types_py.html  z_1c4e163930bdb055_vision_py.html  z_271ced30c536f542___init___py.html  z_271ced30c536f542_callouts_py.html  z_271ced30c536f542_code_py.html  z_271ced30c536f542_footnotes_py.html  z_271ced30c536f542_headings_py.html  z_271ced30c536f542_images_py.html  z_271ced30c536f542_math_py.html  z_2bcb75d65c507448___init___py.html  z_2bdeb1db937b8bb5___init___py.html  z_2bdeb1db937b8bb5__patches_py.html  z_2bdeb1db937b8bb5_base_py.html  z_2bdeb1db937b8bb5_cloudflare_py.html  z_2bdeb1db937b8bb5_eml_py.html  z_2bdeb1db937b8bb5_heif_py.html  z_2bdeb1db937b8bb5_image_py.html  z_2bdeb1db937b8bb5_kreuzberg_py.html  z_2bdeb1db937b8bb5_legacy_py.html  z_2bdeb1db937b8bb5_markitdown_ext_py.html  z_2bdeb1db937b8bb5_office_py.html  z_2bdeb1db937b8bb5_pdf_py.html  z_2bdeb1db937b8bb5_text_py.html  (+138 more)
input/: file_example_PPT_250kB.ppt
markit/: __init__.py  exceptions.py
prompts/: summary_en.md
reference/: claude_api.md  model_prices_and_context_window.md  rapidocr.md
scripts/: eval_kreuzberg.py  install_deps.sh  install_deps_windows.ps1  lib.ps1  lib.sh  setup-dev-zh.ps1  setup-dev-zh.sh  setup-dev.ps1  setup-dev.sh  setup-zh.ps1  setup-zh.sh  setup.ps1  setup.sh  setup.sh.new  sync_defuddle_fixtures.sh  sync_webapp_static.sh  test_scripts.sh
tests/: __init__.py  conftest.py
uat/: README.md  run_all.py  run_resilience.py  test_aimd_limiter.py  test_anthropic_image.py  test_bounded_queue.py  test_chaos_provider.py  test_dead_letter_queue.py  test_gemini_image.py  test_ollama_image.py  test_openai_image.py  test_openrouter_image.py
webapp/: .gitignore  .pnpmfile.cjs  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
website/: .gitignore  index.md  package.json  pnpm-lock.yaml
(+294 files in other folders)
