[project]
name = "markitai-workspace"
version = "0.11.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "markitai",
]

[project.optional-dependencies]
# Forward extras to sub-package — single source of truth in packages/markitai/pyproject.toml
claude-agent = ["markitai[claude-agent]"]
copilot = ["markitai[copilot]"]
gemini-cli = ["markitai[gemini-cli]"]
browser = ["markitai[browser]"]
extra-fetch = ["markitai[extra-fetch]"]
all = ["markitai[all]"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
markitai = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
    "bandit>=1.8.0",
    "lxml-stubs>=0.5.1",
]

[tool.pytest.ini_options]
testpaths = ["packages/markitai/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -n auto -m 'not slow and not network'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]

[tool.coverage.run]
source = ["packages/markitai/src/markitai"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 40
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = [
    "B101",  # assert - used in tests
    "B110",  # try/except/pass - intentional fallback patterns
    "B112",  # try/except/continue - intentional skip patterns
    "B311",  # random - non-cryptographic use (load balancing)
    "B404",  # subprocess import - required for system integration
    "B603",  # subprocess calls - validated inputs from config
    "B607",  # partial path - system commands (powershell, scutil)
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["packages/markitai/src"]
exclude = ["**/tests", "**/__pycache__", "docs/reference"]
venvPath = "."
venv = ".venv"
# Allow optional dependencies to be missing (claude-agent-sdk)
# These are runtime-checked before import using importlib.util.find_spec
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = "warning"
reportPrivateImportUsage = "warning"
reportAttributeAccessIssue = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportFunctionMemberAccess = "warning"
