[project]
name = "markitai-workspace"
version = "0.20.0"  # workspace identity only (unpublished); keep in sync with packages/markitai/src/markitai/__init__.py
requires-python = ">=3.11,<3.15"
dependencies = [
    "markitai",
]

[project.optional-dependencies]
# Forward extras to sub-package — single source of truth in packages/markitai/pyproject.toml
claude-agent = ["markitai[claude-agent]"]
copilot = ["markitai[copilot]"]
browser = ["markitai[browser]"]
extra-fetch = ["markitai[extra-fetch]"]
kreuzberg = ["markitai[kreuzberg]"]
svg = ["markitai[svg]"]
heif = ["markitai[heif]"]
all = ["markitai[all]"]

[tool.uv]
constraint-dependencies = [
    # magika 0.6.3 caps onnxruntime<=1.20.1 on win32 only. A lone 1.20.1 satisfies
    # every platform, so `uv lock` collapses all environments onto it — but 1.20.1
    # ships no Python 3.14 wheels. Force a modern onnxruntime everywhere except
    # win32 on <=3.13 (the only environments where magika's cap must be honored).
    "onnxruntime>=1.21; sys_platform != 'win32'",
    "onnxruntime>=1.21; python_full_version >= '3.14'",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
markitai = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.7",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
    "bandit>=1.8.0",
    "lxml-stubs>=0.5.1",
    "rapidfuzz>=3.9",
]

[tool.pytest.ini_options]
testpaths = ["packages/markitai/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -n auto -m 'not slow and not network'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
    "parity: marks extraction parity tests against fixture contracts",
]

[tool.coverage.run]
source = ["packages/markitai/src/markitai"]
branch = true
parallel = true
relative_files = true  # required by py-cov-action/python-coverage-comment-action
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 40
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = [
    "B101",  # assert - used in tests
    "B110",  # try/except/pass - intentional fallback patterns
    "B112",  # try/except/continue - intentional skip patterns
    "B311",  # random - non-cryptographic use (load balancing)
    "B404",  # subprocess import - required for system integration
    "B603",  # subprocess calls - validated inputs from config
    "B607",  # partial path - system commands (powershell, scutil)
]

# NOTE: intentionally duplicated with packages/markitai/pyproject.toml [tool.pyright]
# (not a drifted leftover): CI (`uv run pyright packages/markitai/src packages/markitai/tests`)
# and the pre-commit pyright hook both run from the repo root, and pyright only reads
# config from its cwd — deleting this section puts CI on bare "standard" defaults
# (measured: 0 errors -> 38 errors). This copy also governs tests/, which the package
# copy excludes.
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["packages/markitai/src"]
exclude = ["**/__pycache__"]
venvPath = "."
venv = ".venv"
# Allow optional dependencies to be missing (claude-agent-sdk)
# These are runtime-checked before import using importlib.util.find_spec
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = "warning"
reportPrivateImportUsage = "warning"
reportAttributeAccessIssue = "warning"
# Lazy-loading modules use __all__ + __getattr__ (PEP 562); pyright can't
# verify __getattr__ will return the declared names, so suppress globally.
reportUnsupportedDunderAll = false
reportArgumentType = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportFunctionMemberAccess = "warning"
